# online-product-tracker

./: .gitignore  API.md  CLI.md  DB.md  README.md  alembic.ini  cli.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 666a97e1571d_create_product_snapshots_table.py
api/: README.md  main.py  shemas.py
app/: __init__.py  actions.py  cli.py  exceptions.py  fetcher.py  main.py  model_registry.py  schemas.py
app/db/: __init__.py  config.py  mixin.py
app/products/: __init__.py  cli.py  controllers.py  models.py  schemas.py  services.py
app/snapshots/: __init__.py  cli.py  controllers.py  models.py  schemas.py  services.py
app/sources/: __init__.py  cli.py  controllers.py  models.py  schemas.py  services.py
tracker/: README.md  actions.py  db.py  fetcher.py  storage.py  types.py  utils.py
tracker/alembic/: env.py
tracker/alembic/versions/: 52f9d06c1a44_create_products_table.py  c4c767b378b8_create_sources_table.py  c5fedcc4484d_create_sources_table.py  fda170855af7_create_products_table.py
tracker/storage/: README.md  mixin.py  models.py
tracker/storage/alembic/versions/: 4c63afa980df_add_created_on_and_updated_on_columns_.py  a5a185a2c72a_create_sources_table.py
tracker/storage/db/: config.py
tracker/storage/products/: cli.py  models.py  services.py
tracker/storage/snapshot/: mdoles.py
tracker/storage/snapshots/: cli.py  models.py  services.py
tracker/storage/sources/: cli.py  models.py  services.py
